public/style.css
/* ... */
.chip-highlighted {
    background-color: rgb(255, 187, 78);
}

@keyframes chipIn {
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

.chip.out {
    animation: chipOut 0.3s ease forwards;
}

@keyframes chipOut {
    to {
        opacity: 0;
        transform: translateY(10px);
    }
}

.sortable-chosen {
    opacity: 1;
    transform: scale(1.05);
    box-shadow: 4px 4px rgba(0, 0, 0, 0.3);
    border-radius: 16px;
}

.sortable-ghost {
    border-radius: 16px;
    opacity: 0;
}

/* Hi Lo Selection Modal */

.modal-overlay {
  position: fixed;
  top: 0; left: 0;
  width: 100vw; height: 100vh;
  background: rgba(250, 250, 250, 0.9);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10000;
  animation: fadeIn 0.1s ease-out forwards;
}

.modal {
  color: white;
  background: rgba(73, 102, 96, 0.84);
  padding: 24px 32px;
  border-radius: 16px;
  max-width: 400px;
  width: 90%;
  text-align: center;
  animation: materialize .4s ease-out forwards;
}

.modal h2 {
    color: white;
}

.options {
  display: flex;
  justify-content: space-around;
  margin: 16px 0;
}

.option {
    width: 100px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    gap: 20px;
    cursor: pointer;
    user-select: none;
    padding: 18px;
    border-radius: 14px;
    transition: background 0.2s ease;
}

.option.selected {
  background-color: rgba(101, 214, 255, 0.5);
}

.option:hover {
  background-color: rgba(101, 214, 255, 0.7);
}

.option p {
    margin-block-start: 0;
    margin-block-end: 0;
}

.low-symbol {
  width: 100px;
  height: 100px;
  font-size: 50px;
  background: white;
  /* border: 2px solid black; */
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  color: black;
  margin-top: auto;
  margin-bottom: auto;
  box-shadow: 4px 4px rgba(0,0,0,0.3);
}

.trophy-div {
    font-size: 20px;
}

.winner-div {
    border-radius: 30px;
    background-color: #dddd5375;
}

.high-symbol {
    border-radius: 8px;
  width: calc(115px / sqrt(2));
  height: calc(115px / sqrt(2));
  font-size: 50px;
  background: black;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  color: white;
  margin: auto;
  transform: rotate(45deg);
  box-shadow: 5px 0px rgba(0,0,0,0.3);
}

.high-symbol-span {
  transform: rotate(-45deg);
}

.low-symbol-mini, .high-symbol-mini {
    width: 30px;
    height: 30px;
    font-size: 20px;
}

.buttons {
  display: flex;
  justify-content: center;
  margin-top: 16px;
}

.hidden {
  display: none;
}

.secret {
    opacity: 0.5;
}

.single-digit {
    transform: translateY(-4%);
}

.single-digit-apple-myungjo {
    transform: translateY(6%);
}

.ten {
    transform: translate(-.6rem, -4%);
    letter-spacing: -1rem;
}

.ten-apple-myungjo {
    transform: translate(-0.2rem, -0.7rem);
    letter-spacing: -.1rem;
}

@media (max-width: 800px) {
    body { 
        padding-bottom: 120px; /* my hand will be smaller because smaller cards, so less padding to achieve non hiding of last hand in scroll window */
    }

    #lobbyTitleContainer, #homeTitleContainer {
        font-size: 80px;
    }

    .hand, .small-hand {
        margin: 0px;
        gap: 2px;
        justify-content: center;
        width: 100%;
    }

    .card, .card-back, .small-hand .card, .small-hand .card-back {
        width: 36px;
        height: 56px;
        font-size: 40px;
        margin: 2px;
        border-radius: 8px;
        box-shadow: 3px 3px rgba(0,0,0,0.3);
    }

    .small-hand .difference-card {
        font-size: 18px;
        width: auto;
    }

    .chip, .my-hand .chip {
        width: 24px;
        height: 14px;
        margin: -7px; 
    }

    /* make the chip stacks just one chip on mobile */
    .chip-stacks-container {
        width: 100%;
        gap: 0px;
    }

    .my-hand .player-info {
        margin: 0px;
    }

    .small-hand canvas { /* root symbol */
        transform: none;
    }

    .chip-stack {
        gap: 0px;
    }

    .difference-paragraph {
        letter-spacing: -.1rem;
    }

    .single-digit {
        transform: translateY(-4%);
    }

    .single-digit-apple-myungjo {
        transform: translateY(6%);
    }

    .ten, .small-hand .ten {
        transform: translate(-.3rem, -3%);
        letter-spacing: -.5rem;
    }

    .ten-apple-myungjo {
        transform: translate(-0.2rem, -0.7rem);
        letter-spacing: -.1rem;
    }

    .player-info {
        width: 100%;
        display: inline-flex;
    }

    #roomCodeContainer {
        font-size: 1.2em;
    }

    #roomCodeContainer.moved {
        transform: translate(calc(-50% - 20px + 50vw), calc(50% + 30px - 50vh));
    }
}

